add pokemon photo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="pokedex">
+        <div class="left-panel">
+            <div class="screen">
+                <div class="pokemon"></div>
+            </div>
+            <div class="buttons">
+                <div class="big-button"></div>
+                <div class="small-buttons">
+                    <div class="button green"></div>
+                    <div class="button orange"></div>
+                </div>
+            </div>
+        </div>
+        <div class="right-panel">
+        </div>
+    </div>
 </body>
 </html>
